--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - inventorydb_data:/var/lib/postgresql/data
+      - ./inventorydb.sql:/docker-entrypoint-initdb.d/inventorydb.sql:ro
     ports:
       - "${DB_PORT}:5432"
 
