Add: csproj migration preserve ItemGroup

--- a/InventoryManagementSystem.csproj
+++ b/InventoryManagementSystem.csproj
@@ -41,4 +41,10 @@
     <Folder Include="Logs\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="Migrations\**\*.*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  
 </Project>
